# Image-processing-interface

./: BlurNode.cpp  BlurNode.h  CMakeLists.txt  Connection.cpp  Connection.h  InputNode.cpp  InputNode.h  Node.cpp  Node.h  NodeBase.cpp  NodeBase.h  NodeCanvas.cpp  NodeCanvas.h  NodeEditor.cpp  NodeEditor.h  NodeSocket.cpp  NodeSocket.h  OutputNode.cpp  OutputNode.h  README.md  Socket.cpp  Socket.h  img.cpp  main.cpp  mainwindow.cpp  mainwindow.h
